double scroll in menus fixed and hidde menus by clicking the store's title

--- a/main.css
+++ b/main.css
@@ -316,10 +316,9 @@ footer {
     -webkit-backdrop-filter: blur(10px);
   }
   /* gallery */
-  body .gallery-hidden {
+  body .gallery-menu {
     transform: translateX(-100vw);
     height: 100%;
-    overflow: hidden;
   }
   body .gallery-menu--show {
     transform: translateX(0);
@@ -498,6 +497,9 @@ footer {
   .left-menu {
     width: 4%;
   }
+  body .gallery-menu {
+    overflow: hidden;
+  }
   body .gallery-houses-container {
     flex-wrap: wrap;
     justify-content: center;
@@ -510,8 +512,9 @@ footer {
 /* portrait */
 @media (min-width: 280px) and (orientation: portrait) {
   /* Hidden gallery */
-  .gallery-hidden {
+  .gallery-menu {
     height: 100vh;
+    overflow-x: hidden;
   }
   .gallery-houses-container {
     position: relative;
@@ -606,7 +609,7 @@ footer {
   }
 }
 
-.gallery-hidden {
+.gallery-menu {
   width: 100%;
   position: absolute;
   flex-direction: column;
@@ -617,7 +620,7 @@ footer {
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   overscroll-behavior: contain;
-  overflow: scroll;
+  overflow-y: scroll;
   transition: transform 0.6s ease-in-out;
 }
 .gallery-menu--show {
